That time a game could end